kustomize/manifests/app/frontend/iotdemo-app/dashboard/base/consumer-app-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: iot-demo
    name: consumer-app
  name: consumer-app
  annotations:
    openshift.io/host.generated: "true"
    #argocd.argoproj.io/hook: PreSync
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: consumer-app
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
